Mon Mar  5 12:44:03 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* st.c (unpack_entries): use union instead of casted pointer.
	  patched by Sokolov Yura <funny.falcon AT gmail.com>.

	* st.c: use PACKED_ENT and FIND_ENTRY.  patched by Sokolov
	  Yura <funny.falcon AT gmail.com>.

	* st.c (unpack_entries): reallocate bins if packed array size
	  is not same as initial bins size.  based on a patch by
	  Sokolov Yura <funny.falcon AT gmail.com>.

Mon Mar  5 11:51:48 2012  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/bigdecimal/lib/bigdecimal/math.rb: remove description about
	  BigMath#log. patched by Sho Hashimoto [ruby-dev:45307] [Bug #6112]

	* string.c (str_byteslice): fix typo.

Sun Mar  4 23:21:10 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (parser_tokadd_string): regexp engine doesn't need
	  terminators to be escaped.  [ruby-core:40364][Bug #5484]

Sat Mar  3 22:51:46 2012  Tanaka Akira  <akr@fsij.org>

	* process.c (rb_run_exec_options_err): chdir at last to interpret
	  relative pathnames from the current directory of the parent process.

Sat Mar  3 12:20:44 2012  Tadayoshi Funaba  <tadf@dotrb.org>

	* ext/date/date_strftime.c: reassigned some variables.

Sat Mar  3 12:12:16 2012  Tadayoshi Funaba  <tadf@dotrb.org>

	* ext/date/date_{parse,strptime}.c: [ruby-dev:45303].

Sat Mar  3 10:09:21 2012  Aaron Patterson <aaron@tenderlovemaking.com>

	* lib/xmlrpc/client.rb (initialize): net/http defaults to 1_2 in 1.8+,
	  so we can safely remove the call to enable it.

Sat Mar  3 08:42:25 2012  Aaron Patterson <aaron@tenderlovemaking.com>

	* lib/xmlrpc/client.rb (new2): use URI for uri parsing.
	* test/xmlrpc/test_client.rb: test that query params are passed to the
	  client constructor.

Sat Mar  3 08:20:10 2012  Aaron Patterson <aaron@tenderlovemaking.com>

	* lib/xmlrpc/client.rb (new2): raises an ArgumentError on bad
	  arguments.
	* test/xmlrpc/test_client.rb: tests for bad uris
